--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/jmuller3140/finding-vince#readme",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "^4.16.4",
     "next": "^8.0.3",
+    "next-routes": "^1.4.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
