--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/jmuller3140/finding-vince#readme",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "express": "^4.16.4",
     "next": "^8.0.3",
     "next-routes": "^1.4.2",
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
