--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "next": "^8.0.3",
+    "next-fonts": "^0.17.0",
     "next-routes": "^1.4.2",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "url-loader": "^1.1.2"
   }
 }
