--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-reveal": "^1.2.2",
     "url-loader": "^1.1.2"
   }
 }
