--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,28 +6,13 @@
 image: node:10.15.3
 
 pipelines:
-  default:
-    - step:
-        caches:
-          - node
-        script: # Modify the commands below to build your repository.
-          - npm install
-          - npm rebuild node-sass
-          - npm run eslint
-          - npm run test:ci
   branches:
     master:
-      - step:
-          name: Install and Test
-          script:
-            - sh scripts/test.sh
-          artifacts:
-            - node_modules/**
       - step:
           name: Build and deploy
           deployment: production
           script:
-            - npm run build
+            - npm run build && next export
             - pipe: atlassian/aws-s3-deploy:0.4.3
               variables:
                 AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID # Optional if already defined in the context.
@@ -36,12 +21,6 @@ pipelines:
                 S3_BUCKET: $S3_PROD_BUCKET
                 LOCAL_PATH: $LOCAL_PATH
     dev:
-      - step:
-          name: Install and Test
-          script:
-            - sh scripts/test.sh
-          artifacts:
-            - node_modules/**
       - step:
           name: Build and deploy
           deployment: test
