--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,13 +6,19 @@
 image: node:10.15.3
 
 pipelines:
+  default:
+    - step:
+        caches:
+          - node
+        script: # Modify the commands below to build your repository.
+          - npm install
   branches:
     master:
       - step:
           name: Build and deploy
           deployment: production
           script:
-            - npm run build && next export
+            - npm run build
             - pipe: atlassian/aws-s3-deploy:0.4.3
               variables:
                 AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID # Optional if already defined in the context.
