--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ pipelines:
           name: Build and deploy
           deployment: production
           script:
-            - npm run build
+            - npm run build && next export
             - pipe: atlassian/aws-s3-deploy:0.4.3
               variables:
                 AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID # Optional if already defined in the context.
