--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "set NODE_ENV=production node server.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "bootstrap": "^4.5.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "next": "^8.0.3",
